library/src/org/kiama/example/oberon0/L4/tests/badarray.out
* _pp.ob
MODULE badarray;

    CONST
        size = 5;

    TYPE
        atype1 = ARRAY -1 OF INTEGER;
        atype3 = ARRAY TRUE OF INTEGER;
        atype4 = ARRAY 10 OF INTEGER;

    VAR
        array1 : atype4;
        array2 : ARRAY 26 OF BOOLEAN;
        array3 : ARRAY 3 DIV 0 OF INTEGER;
        abool : BOOLEAN;
        aint : INTEGER;
        array4 : ARRAY aint OF INTEGER;

BEGIN
    array1 := 1;
    array1[abool] := 1;
    array1[array1] := 2;
    array1[1] := abool;
    array2[1] := 1;
    array2[-2] := TRUE;
    array2[100] := TRUE;
    array2[1 < 2] := TRUE;
    abool[3] := aint[4];
    abool[3] := 4;
    array2 := array2 + 1
END badarray.
[3]* errors
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:7:20: ARRAY size is -1 but should be >= 0
[3]    atype1 = ARRAY -1 OF INTEGER;
[3]                   ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:8:20: type error: got BOOLEAN, but expected INTEGER
[3]    atype3 = ARRAY TRUE OF INTEGER;
[3]                   ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:14:26: division by zero in constant expression
[3]    array3 : ARRAY 3 DIV 0 OF INTEGER;
[3]                         ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:17:20: expression is not constant
[3]    array4 : ARRAY aint OF INTEGER;
[3]                   ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:20:5: can't assign to array
[3]    array1 := 1;
[3]    ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:20:15: type error: got INTEGER, but expected atype4
[3]    array1 := 1;
[3]              ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:21:12: type error: got BOOLEAN, but expected INTEGER
[3]    array1[abool] := 1;
[3]           ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:22:12: type error: got atype4, but expected INTEGER
[3]    array1[array1] := 2;
[3]           ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:23:18: type error: got BOOLEAN, but expected INTEGER
[3]    array1[1] := abool;
[3]                 ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:24:18: type error: got INTEGER, but expected BOOLEAN
[3]    array2[1] := 1;
[3]                 ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:25:12: index out of range
[3]    array2[-2] := TRUE;
[3]           ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:26:12: index out of range
[3]    array2[100] := TRUE;
[3]           ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:27:12: type error: got BOOLEAN, but expected INTEGER
[3]    array2[1 < 2] := TRUE;
[3]           ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:28:5: array indexing attempted on non-ARRAY
[3]    abool[3] := aint[4];
[3]    ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:28:17: array indexing attempted on non-ARRAY
[3]    abool[3] := aint[4];
[3]                ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:29:5: array indexing attempted on non-ARRAY
[3]    abool[3] := 4;
[3]    ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:30:5: can't assign to array
[3]    array2 := array2 + 1
[3]    ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:30:15: type error: got INTEGER, but expected ARRAY 26 OF BOOLEAN
[3]    array2 := array2 + 1
[3]              ^
[3]src/org/kiama/example/oberon0/L4/tests/badarray.ob:30:15: type error: got ARRAY 26 OF BOOLEAN, but expected INTEGER
[3]    array2 := array2 + 1
[3]              ^
